# blender_notebook

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
blender_notebook/: installer.py  kernel.py  kernel_launcher.py
